testsuite/tests/typecheck/should_fail/T2714.stderr

T2714.hs:8:7: error:
    • Couldn't match type ‘c’ with ‘f0 (a -> b)’
      Expected: c -> a
        Actual: f0 (a -> b) -> f0 b
      ‘c’ is a rigid type variable bound by
        a type expected by the context:
          forall c. c -> a
        at T2714.hs:8:1-13
    • In the expression: ffmap x
      In an equation for ‘f’: f x = ffmap x
    • Relevant bindings include
        x :: (a -> b) -> b (bound at T2714.hs:8:3)
        f :: ((a -> b) -> b) -> forall c. c -> a (bound at T2714.hs:8:1)
